--- a/css/volations.css
+++ b/css/volations.css
@@ -29,6 +29,18 @@ button:hover {
   background: #fff;
   z-index: 2;
 }
+pre{background: #9e9e9e;
+    border: 2px dashed #ff5a5a;
+    color: #fff;
+    font-size: 20px;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5); }
+
+section{border-bottom: 2px solid #0e3f96;
+    overflow: hidden;
+    margin-bottom: 10px;}
 
 .left_block .lg {
   padding: 10px 10px 20px;
@@ -373,6 +385,23 @@ table.list th {
 /* select2 */
 .cold-1 select{width: 100%;}
 
+
+/*files*/
+.img_uploads{   height: 100px;
+
+    border: 2px solid #fff;
+    transition: .4s all;
+    border-radius: 7px;
+    filter: blur(2px);}
+.img_uploads:hover{border: 2px solid #e50004; filter: none;}
+.file, .linkimgs{float: left;    margin: 5px;}
+.file a{text-align: center;    color: #000;   text-decoration: none;}
+
+.file a i{font-size: 100px;}
+.word{color: #0e4097;}
+.exel{color: #5a8b5f;}
+.pdf{color: #e50004;}
+.ofter{color: #000;}
 
 /* upload file */
 
